Fix task-list scrollbar on smaller widths

--- a/src/styles.css
+++ b/src/styles.css
@@ -94,10 +94,11 @@ body {
         height: 100%;
         width: 100%;
     }
-
-    .main-right .task-list {
+    
+    .task-list {
         max-height: 100%;
-        height: 85%;
+        height: auto;
+        overflow-y: auto;
     }
 }
 
@@ -114,9 +115,10 @@ body {
         align-items: start;
     }
 
-    .main-right .task-list {
+    .task-list {
         max-height: 100%;
-        height: 85%;
+        height: auto;
+        overflow-y: auto;
     }
 }
 
@@ -274,8 +276,8 @@ nav button:hover {
     flex-direction: column;
     align-items: center;
     padding-top: 30px;
-    max-height: 100%;
     width: 100%;
+    max-height: 100%;
     height: 100%;
     overflow-y: auto;
 }
